2006-07-31  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* python/convertrules.py: backport: bugfix for \epsfile.

2006-06-27  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/bar-line.cc (compound_barline): Fix parenthesis error,
	gives correct vertical placement of \bar ":" in all staff
	sizes. Thanks Martial!

2006-06-22  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* ly/performer-init.ly: Add some missing links in the context
	hierarchy for MIDI output. There are probably some more missing!

2006-06-15  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* ly/lilypond-book-preamble.ly: add version.

2006-06-14  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* ly/lilypond-book-preamble.ly: remove \ 

	* scripts/lilypond-book.py (PREAMBLE_LY): backport: include
	lilypond-book-preamble.ly

	* ly/lilypond-book-preamble.ly: backport: new file. 

	* lily/tuplet-bracket.cc (calc_positions): backport: look at
	stem_end_position for beams.

	* lily/stem.cc (calc_stem_end_position): backport: read
	quantized-positions for beamed stem.

	* lily/rest.cc (y_offset_callback): backport: use scm_is_number()
	for position_override

	* lily/note-spacing.cc (stem_dir_correction): backport: estimate
	stem end.

	* lily/lexer.ll: backport: set version-seen?

2006-06-13  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/font-config.cc (init_fontconfig): don't access null
	cache_file variable.

	* scm/stencil.scm (write-system-signature): backport: simpler format.

	* VERSION (PATCH_LEVEL):  bump to 2.8.5

2006-06-09  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/define-grobs.scm (all-grob-descriptions): Add
	line-spanner-interface to all grobs that already have
	text-spanner-interface or dynamic-text-spanner-interface

	* lily/vertical-align-engraver.cc: Make sure that the
	align{Above,Below}Context properties are included in the automatic
	documentation.

2006-06-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION: release 2.8.4
