@@ -1,3 +1,9 @@
+2006-08-03  Mats Bengtsson  <mabe@drongo.s3.kth.se>
+
+	* python/convertrules.py: backport: Fix indentation bug that broke
+	conversion of files older than 1.3.117.
+
+
 2006-07-31  Mats Bengtsson  <mabe@drongo.s3.kth.se>
 
 	* python/convertrules.py: backport: bugfix for \epsfile.
